# finderX

./: .gitignore  AGENTS.md  CMakeLists.txt  Design.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml  release.yml
cmake/: VerifyAppResources.cmake  VerifyIconTransparency.ps1
docs/superpowers/plans/: 2026-06-29-finderx-cpp-mvp-plan.md  2026-06-30-basic-file-actions-plan.md  2026-06-30-current-directory-search-plan.md  2026-06-30-file-management-basics-plan.md  2026-06-30-file-operations-mvp-plan.md  2026-06-30-finder-visual-restoration-plan.md  2026-06-30-finderx-filesystem-loading-plan.md  2026-06-30-finderx-tabs-plan.md  2026-06-30-multi-select-batch-operations-plan.md  2026-06-30-navigation-usability-plan.md  2026-07-01-finderx-address-input-plan.md  2026-07-01-finderx-favorites-management-plan.md  2026-07-01-finderx-settings-sort-favorites-plan.md  2026-07-01-finderx-tab-close-favorites-shortcuts-plan.md  2026-07-04-spaceui-ui-refactor.md  2026-07-15-finderx-row-selection-quick-preview.md
docs/superpowers/specs/: 2026-06-29-finderx-cpp-design.md  2026-06-30-basic-file-actions-design.md  2026-06-30-current-directory-search-design.md  2026-06-30-file-management-basics-design.md  2026-06-30-file-operations-mvp-design.md  2026-06-30-finder-visual-restoration-design.md  2026-06-30-finderx-tabs-design.md  2026-06-30-multi-select-batch-operations-design.md  2026-06-30-navigation-usability-design.md  2026-07-01-finderx-favorites-management-design.md  2026-07-01-finderx-next-features-design.md  2026-07-01-finderx-settings-sort-favorites-design.md  2026-07-01-finderx-tab-close-favorites-shortcuts-design.md  2026-07-15-finderx-row-selection-quick-preview-design.md
resources/: FinderX.rc  resource.h
scripts/: build-tests.bat  build.bat  build.ps1
src/: main.cpp
src/app/: App.cpp  App.h
src/fs/: DirectoryLoader.cpp  DirectoryLoader.h  DirectoryLoaderTests.cpp  DriveEnumerator.cpp  DriveEnumerator.h  DriveEnumeratorTests.cpp  FileCreation.cpp  FileCreation.h  FileMetadata.cpp  FileMetadata.h  FileSorter.cpp  FileSorter.h  FileSorterTests.cpp  ZipOperations.cpp  ZipOperations.h  ZipOperationsTests.cpp
src/model/: FileNode.h  FileTree.cpp  FileTree.h  FileTreeTests.cpp
src/navigation/: NavigationHistory.cpp  NavigationHistory.h  NavigationHistoryTests.cpp  SidebarModel.cpp  SidebarModel.h
src/settings/: AppSettings.cpp  AppSettings.h  AppSettingsTests.cpp
src/shell/: ShellActions.cpp  ShellActions.h  ShellActionsTests.cpp  ShellFileOperations.cpp  ShellFileOperations.h
src/ui/: AddressEditor.cpp  AddressEditor.h  AddressEditorTests.cpp  ContextMenuPolicy.cpp  ContextMenuPolicy.h  ContextMenuPolicyTests.cpp  ContextMenuPresenter.cpp  ContextMenuPresenter.h  ContextMenuPresenterTests.cpp  DirectoryRefreshDebouncer.h  DirectoryRefreshDebouncerTests.cpp  DirectoryWatcherConfig.h  DpiScaling.h  DpiScalingTests.cpp  DragFeedback.cpp  DragFeedback.h  DragFeedbackTests.cpp  FileIconResolver.cpp  FileIconResolver.h  FileIconResolverTests.cpp  FileOperationState.cpp  FileOperationState.h  FileOperationStateTests.cpp  FileUndoManager.cpp  FileUndoManager.h  FileUndoManagerTests.cpp  FinderChrome.cpp  FinderChrome.h  FinderChromeTests.cpp  FinderListView.cpp  FinderListView.h  FinderListViewTests.cpp  Localization.cpp  Localization.h  LocalizationTests.cpp  MainWindow.cpp  MainWindow.h  NativeTitleBar.cpp  NativeTitleBar.h  NativeTitleBarTests.cpp  (+22 more)
